--- a/index.html
+++ b/index.html
@@ -3,18 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>DriverChunk Solution</title>
-  
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" />
+  <title>DriverChunk Solution - Login</title>
 
   <style>
-    /* Reset */
+    /* Common reset */
     * {
       box-sizing: border-box;
       margin: 0; padding: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      user-select: none; /* Disable text selection globally */
+      user-select: none;
     }
 
     body {
@@ -25,9 +22,73 @@
       flex-direction: column;
       align-items: center;
       padding: 1rem;
-      overflow-x: hidden;
     }
 
+    /* Login form styles */
+    #login-container {
+      background: #1e293b;
+      border-radius: 12px;
+      box-shadow: 0 6px 16px rgba(0,0,0,0.85);
+      max-width: 400px;
+      width: 100%;
+      padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    #login-container h2 {
+      color: #60a5fa;
+      text-align: center;
+    }
+
+    input[type="text"], input[type="password"] {
+      padding: 0.8rem;
+      border-radius: 6px;
+      border: none;
+      font-size: 1rem;
+    }
+
+    button {
+      padding: 0.9rem;
+      background-color: #2563eb;
+      border: none;
+      border-radius: 8px;
+      font-weight: 700;
+      color: white;
+      cursor: pointer;
+      font-size: 1.1rem;
+      user-select: none;
+      transition: background-color 0.3s ease;
+    }
+
+    button:hover {
+      background-color: #1d4ed8;
+    }
+
+    .toggle {
+      text-align: center;
+      color: #60a5fa;
+      cursor: pointer;
+      user-select: none;
+    }
+
+    .error {
+      color: #f87171;
+      font-weight: 600;
+      text-align: center;
+    }
+
+    /* Main page container, hidden initially */
+    #main-page {
+      display: none;
+      max-width: 900px;
+      width: 100%;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    /* Use your main page styles here */
     header {
       font-size: 2.4rem;
       font-weight: 700;
@@ -42,99 +103,6 @@
       color: #a5b4fc;
       margin-bottom: 1.8rem;
       text-align: center;
-      user-select: none;
-    }
-
-    /* Login/Signup Section */
-    #login-signup {
-      background-color: #1e293b;
-      border-radius: 12px;
-      padding: 2rem;
-      box-shadow: 0 6px 16px rgba(0,0,0,0.85);
-      max-width: 400px;
-      width: 100%;
-      color: #cbd5e1;
-      margin-bottom: 2rem;
-    }
-
-    #login-signup h2 {
-      color: #60a5fa;
-      text-align: center;
-      margin-bottom: 1rem;
-    }
-
-    form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      margin-bottom: 1rem;
-    }
-
-    label {
-      font-weight: 600;
-    }
-
-    input[type="text"],
-    input[type="password"] {
-      padding: 0.6rem 0.8rem;
-      border-radius: 6px;
-      border: none;
-      font-size: 1rem;
-      outline: none;
-    }
-
-    input[type="text"]:focus,
-    input[type="password"]:focus {
-      box-shadow: 0 0 0 3px #60a5fa;
-    }
-
-    button {
-      background-color: #2563eb;
-      color: white;
-      font-weight: 700;
-      font-size: 1.1rem;
-      padding: 0.9rem 1.8rem;
-      border-radius: 8px;
-      border: none;
-      cursor: pointer;
-      transition: background-color 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    button:hover,
-    button:focus {
-      background-color: #1d4ed8;
-      box-shadow: 0 7px 20px rgba(29,78,216,0.9);
-      outline: none;
-    }
-
-    #toggle-forms {
-      text-align: center;
-      color: #60a5fa;
-      cursor: pointer;
-      font-weight: 600;
-      user-select: none;
-    }
-
-    #toggle-forms:hover {
-      text-decoration: underline;
-    }
-
-    #error-message {
-      color: #f87171;
-      font-weight: 700;
-      text-align: center;
-      min-height: 1.2rem;
-      margin-bottom: 1rem;
-      user-select: none;
-    }
-
-    /* Main Content Section */
-    #main-content {
-      max-width: 900px;
-      width: 100%;
-      display: none; /* Hidden until login */
-      flex-direction: column;
-      gap: 2rem;
     }
 
     main {
@@ -205,8 +173,6 @@
       box-shadow: 0 5px 14px rgba(37,99,235,0.85);
       user-select: none;
       transition: background-color 0.3s ease, box-shadow 0.3s ease;
-      text-align: center;
-      display: inline-block;
     }
 
     a.button-download:hover,
@@ -275,56 +241,55 @@
         flex: none;
         width: 100%;
       }
+    }
 
-      #login-signup {
-        max-width: 100%;
-      }
+    /* Logout button */
+    #logout-btn {
+      background-color: #ef4444;
+      margin: 1rem auto;
+      width: 120px;
+      text-align: center;
+      border-radius: 8px;
+      font-weight: 700;
+      cursor: pointer;
+      padding: 0.6rem;
+      user-select: none;
+      color: white;
+      border: none;
+      display: block;
+    }
+
+    #logout-btn:hover {
+      background-color: #b91c1c;
     }
   </style>
 </head>
 <body>
 
-<header>
-  DriverChunk Solution 2.0<br />
-  Dark Mode & Light Mode Versions
-</header>
-<div id="credit">Developed by Arka Nandy</div>
-
-<!-- Login and Signup Section -->
-<section id="login-signup" aria-label="Login and Signup Section">
+<!-- Login / Signup form -->
+<div id="login-container">
   <h2 id="form-title">Sign In</h2>
 
-  <div id="error-message" role="alert" aria-live="assertive"></div>
+  <div id="error-msg" class="error"></div>
 
-  <!-- Sign In Form -->
-  <form id="signin-form">
-    <label for="signin-username">Username</label>
-    <input type="text" id="signin-username" autocomplete="username" required />
+  <input type="text" id="username" placeholder="Username" autocomplete="username" />
+  <input type="password" id="password" placeholder="Password" autocomplete="current-password" />
 
-    <label for="signin-password">Password</label>
-    <input type="password" id="signin-password" autocomplete="current-password" required />
+  <button id="action-btn">Sign In</button>
 
-    <button type="submit">Sign In</button>
-  </form>
+  <div class="toggle" id="toggle-form">Don't have an account? Sign Up</div>
+</div>
 
-  <!-- Sign Up Form (hidden initially) -->
-  <form id="signup-form" style="display:none;">
-    <label for="signup-username">Username</label>
-    <input type="text" id="signup-username" autocomplete="username" required />
+<!-- Main page content hidden initially -->
+<div id="main-page" role="main" aria-label="Main DriverChunk Content" tabindex="-1">
+  <button id="logout-btn" aria-label="Logout">Logout</button>
 
-    <label for="signup-password">Password</label>
-    <input type="password" id="signup-password" autocomplete="new-password" required />
+  <header>
+    DriverChunk Solution 2.0<br />
+    Dark Mode & Light Mode Versions
+  </header>
+  <div id="credit">Developed by Arka Nandy</div>
 
-    <button type="submit">Sign Up</button>
-  </form>
-
-  <div id="toggle-forms" tabindex="0" role="button" aria-pressed="false" aria-label="Toggle between Sign In and Sign Up">
-    Don't have an account? Sign Up
-  </div>
-</section>
-
-<!-- Main Content -->
-<section id="main-content" tabindex="-1" aria-label="Main DriverChunk Solution Content">
   <main>
     <section class="app-version" id="dark-mode-app">
       <img src="darkmode-screenshot.png" alt="DriverChunk Solution 2.0 (Dark) Screenshot" />
@@ -355,184 +320,162 @@
     </section>
   </main>
 
-  <section class="about" aria-label="About DriverChunk Solution">
-    <h2>About Us</h2>
-    <p>
-      DriverChunk Solution is designed to simplify the management of your PC’s drivers and system information.
-      It helps detect missing or outdated drivers and provides easy access to trusted driver sources.
-      This project is developed and maintained by Arka Nandy with the goal of making driver management accessible and reliable.
-    </p>
+  <section class="notice">
+    WARNING: DriverChunk Solution 2.0 is a beta release. Use at your own risk and always backup your drivers before installing or updating.
   </section>
 
-  <section class="readme" aria-label="Readme Information">
-DriverChunk Solution 2.0
-
-Features:
-- System Information: Displays CPU, RAM, disk, and OS details.
-- Installed Drivers: Lists all installed device drivers.
-- Missing Drivers & Suggestions: Flags missing drivers and links to vendor sites.
-
-Usage:
-Download and unzip the desired version. Run the included HTA file on Windows systems.
-Ensure to run with administrator rights for full functionality.
-
-Disclaimer:
-Use at your own risk. Always keep backups and update your antivirus software.
+  <section class="about">
+    DriverChunk Solution 2.0 is a free and open-source application built with the latest web technologies, designed to
+    make managing your PC drivers easier. It shows detailed hardware info and helps identify missing or outdated drivers.
   </section>
 
-  <section class="notice" role="alert" aria-live="polite">
-    <strong>Important:</strong> HTA files are Windows HTML Applications that run scripts on your PC. Please run only trusted files. Use antivirus software and keep your system updated.
+  <section class="readme">
+    Readme:{"\n"}
+    • The app is currently for Windows OS only.{'\n'}
+    • Requires administrator privileges to install or update drivers.{'\n'}
+    • Regular updates coming soon with more features.
   </section>
-</section>
 
-<footer>
-  © 2025 Arka Nandy. All rights reserved.
-</footer>
+  <footer>
+    &copy; 2024 DriverChunk Solution by Arka Nandy. All rights reserved.
+  </footer>
+</div>
 
 <script>
-  // Elements references
-  const signinForm = document.getElementById('signin-form');
-  const signupForm = document.getElementById('signup-form');
-  const toggleFormsBtn = document.getElementById('toggle-forms');
-  const loginSignupSection = document.getElementById('login-signup');
-  const mainContentSection = document.getElementById('main-content');
-  const errorMessage = document.getElementById('error-message');
-  const formTitle = document.getElementById('form-title');
-
-  // Utility: Get users object from localStorage or empty object
-  function getUsers() {
-    const usersJSON = localStorage.getItem('users');
-    return usersJSON ? JSON.parse(usersJSON) : {};
+  // Simple SHA-256 hashing for passwords (for demo only)
+  async function sha256(message) {
+    const msgBuffer = new TextEncoder().encode(message);
+    const hashBuffer = await crypto.subtle.digest('SHA-256', msgBuffer);
+    const hashArray = Array.from(new Uint8Array(hashBuffer));
+    return hashArray.map(b => b.toString(16).padStart(2, '0')).join('');
   }
 
-  // Utility: Save users object to localStorage
+  const loginContainer = document.getElementById('login-container');
+  const mainPage = document.getElementById('main-page');
+  const errorMsg = document.getElementById('error-msg');
+  const formTitle = document.getElementById('form-title');
+  const toggleForm = document.getElementById('toggle-form');
+  const actionBtn = document.getElementById('action-btn');
+  const logoutBtn = document.getElementById('logout-btn');
+
+  let isSignUp = false;
+
+  // Toggle login/signup form
+  toggleForm.addEventListener('click', () => {
+    isSignUp = !isSignUp;
+    formTitle.textContent = isSignUp ? 'Sign Up' : 'Sign In';
+    actionBtn.textContent = isSignUp ? 'Sign Up' : 'Sign In';
+    toggleForm.textContent = isSignUp ? 'Already have an account? Sign In' : "Don't have an account? Sign Up";
+    errorMsg.textContent = '';
+  });
+
+  // Validate username (simple: no spaces, min 3 chars)
+  function validateUsername(u) {
+    return /^[a-zA-Z0-9_]{3,}$/.test(u);
+  }
+
+  // Load users from localStorage
+  function loadUsers() {
+    return JSON.parse(localStorage.getItem('users') || '{}');
+  }
+
+  // Save users to localStorage
   function saveUsers(users) {
     localStorage.setItem('users', JSON.stringify(users));
   }
 
-  // Utility: Save last logged-in user credentials
-  function setLastUser(username, password) {
-    localStorage.setItem('lastUser', JSON.stringify({ username, password }));
+  // Check if user is "logged in"
+  function getLoggedInUser() {
+    return localStorage.getItem('loggedInUser');
   }
 
-  // Utility: Load last user and pre-fill sign-in inputs if any
-  function loadLastUser() {
-    const lastUserJSON = localStorage.getItem('lastUser');
-    if (lastUserJSON) {
-      try {
-        const lastUser = JSON.parse(lastUserJSON);
-        if (lastUser.username && lastUser.password) {
-          document.getElementById('signin-username').value = lastUser.username;
-          document.getElementById('signin-password').value = lastUser.password;
-        }
-      } catch {
-        // Ignore JSON parse errors
-      }
-    }
+  // Set logged in user
+  function setLoggedInUser(username) {
+    localStorage.setItem('loggedInUser', username);
   }
 
-  // Toggle between Sign In and Sign Up forms
-  function toggleForms() {
-    errorMessage.textContent = '';
-    if (signinForm.style.display !== 'none') {
-      signinForm.style.display = 'none';
-      signupForm.style.display = 'flex';
-      formTitle.textContent = 'Sign Up';
-      toggleFormsBtn.textContent = 'Already have an account? Sign In';
-      toggleFormsBtn.setAttribute('aria-pressed', 'true');
+  // Clear logged in user
+  function clearLoggedInUser() {
+    localStorage.removeItem('loggedInUser');
+  }
+
+  // Show main page or login form based on login state
+  function updateView() {
+    const loggedIn = getLoggedInUser();
+    if (loggedIn) {
+      loginContainer.style.display = 'none';
+      mainPage.style.display = 'flex';
+      mainPage.querySelector('header').textContent = `Welcome, ${loggedIn} - DriverChunk Solution 2.0`;
+      errorMsg.textContent = '';
     } else {
-      signinForm.style.display = 'flex';
-      signupForm.style.display = 'none';
+      loginContainer.style.display = 'flex';
+      mainPage.style.display = 'none';
       formTitle.textContent = 'Sign In';
-      toggleFormsBtn.textContent = "Don't have an account? Sign Up";
-      toggleFormsBtn.setAttribute('aria-pressed', 'false');
+      actionBtn.textContent = 'Sign In';
+      toggleForm.textContent = "Don't have an account? Sign Up";
+      isSignUp = false;
     }
   }
 
-  toggleFormsBtn.addEventListener('click', toggleForms);
-  toggleFormsBtn.addEventListener('keypress', e => {
-    if (e.key === 'Enter' || e.key === ' ') {
-      e.preventDefault();
-      toggleForms();
-    }
-  });
-
-  // Handle Sign Up form submission
-  signupForm.addEventListener('submit', e => {
-    e.preventDefault();
-    errorMessage.textContent = '';
-
-    const username = document.getElementById('signup-username').value.trim();
-    const password = document.getElementById('signup-password').value;
+  // Handle login or signup button click
+  actionBtn.addEventListener('click', async () => {
+    const username = document.getElementById('username').value.trim();
+    const password = document.getElementById('password').value;
 
     if (!username || !password) {
-      errorMessage.textContent = 'Please enter both username and password.';
+      errorMsg.textContent = 'Please enter username and password.';
       return;
     }
 
-    let users = getUsers();
-
-    if (users[username]) {
-      errorMessage.textContent = 'Username already exists. Please choose another.';
+    if (!validateUsername(username)) {
+      errorMsg.textContent = 'Username must be at least 3 chars, letters/numbers/_ only.';
       return;
     }
 
-    users[username] = password;
-    saveUsers(users);
+    errorMsg.textContent = '';
 
-    errorMessage.style.color = '#22c55e'; // green success
-    errorMessage.textContent = 'Account created successfully! You can now sign in.';
+    const users = loadUsers();
+    const hashedPassword = await sha256(password);
 
-    // Clear signup inputs
-    signupForm.reset();
-
-    // Switch to sign-in form after short delay
-    setTimeout(() => {
-      errorMessage.style.color = '#f87171'; // reset to error color
-      toggleForms();
-    }, 1800);
+    if (isSignUp) {
+      // Sign Up flow
+      if (users[username]) {
+        errorMsg.textContent = 'User already exists. Please choose another username.';
+        return;
+      }
+      users[username] = hashedPassword;
+      saveUsers(users);
+      errorMsg.style.color = 'lightgreen';
+      errorMsg.textContent = 'User created! Please sign in.';
+      // Switch to sign in form
+      toggleForm.click();
+    } else {
+      // Login flow
+      if (!users[username]) {
+        errorMsg.textContent = 'User not found. Please sign up.';
+        return;
+      }
+      if (users[username] !== hashedPassword) {
+        errorMsg.textContent = 'Incorrect password.';
+        return;
+      }
+      setLoggedInUser(username);
+      updateView();
+      errorMsg.style.color = 'lightgreen';
+      errorMsg.textContent = '';
+    }
   });
 
-  // Handle Sign In form submission
-  signinForm.addEventListener('submit', e => {
-    e.preventDefault();
-    errorMessage.textContent = '';
-
-    const username = document.getElementById('signin-username').value.trim();
-    const password = document.getElementById('signin-password').value;
-
-    if (!username || !password) {
-      errorMessage.textContent = 'Please enter both username and password.';
-      return;
-    }
-
-    const users = getUsers();
-
-    if (!users[username]) {
-      errorMessage.textContent = 'Username does not exist. Please sign up first.';
-      return;
-    }
-
-    if (users[username] !== password) {
-      errorMessage.textContent = 'Incorrect password. Please try again.';
-      return;
-    }
-
-    // Successful login
-    setLastUser(username, password);
-
-    // Hide login/signup and show main content
-    loginSignupSection.style.display = 'none';
-    mainContentSection.style.display = 'flex';
-
-    // Accessibility: set focus on main content
-    mainContentSection.focus();
+  // Logout button click
+  logoutBtn.addEventListener('click', () => {
+    clearLoggedInUser();
+    updateView();
   });
 
-  // On page load
-  window.addEventListener('DOMContentLoaded', () => {
-    loadLastUser();
-  });
+  // On load, check login
+  window.onload = () => {
+    updateView();
+  };
 </script>
 
 </body>
